jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops-tools
spec:
  tls:
  - hosts:
      - jenkins.k-tech.cloud
    secretName: jenkins-secret
  ingressClassName: nginx
  rules:
  - host: jenkins.k-tech.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
      - path: /agents
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              name: agents
